--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,9 @@
-﻿# CMakeList.txt: проект CMake для word_counter; включите исходный код и определения,
-# укажите здесь логику для конкретного проекта.
-#
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.8)
 
-# Добавьте источник в исполняемый файл этого проекта.
-add_executable (main "main.cpp")
-
-# TODO: Добавьте тесты и целевые объекты, если это необходимо.
+ file(GLOB source_files
+            "*.h"
+            "*.cpp"
+			"exceptions/*.cpp"
+			"exceptions/*.h"
+    )
+add_executable (main ${source_files})
