--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,6 @@ endif()
 # Включите подпроекты.
 add_subdirectory(src)
 add_subdirectory(unit-test)
+
+add_executable(main main.cpp)
+target_link_libraries(main LIB1)
