--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,10 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
- file(GLOB source_files
+
+file(GLOB source_files
             "*.h"
             "*.cpp"
 			"exceptions/*.cpp"
 			"exceptions/*.h"
     )
-add_executable (main ${source_files})
+add_library (LIB1 STATIC ${source_files})
